kube/3-deploy/1-core/05-ingress/nginx/install.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    "io.cilium/lb-ipam-ips": "${APP_IP_NGINX}"
spec:
  allocateLoadBalancerNodePorts: true
  externalIPs:
    - "${APP_IP_NGINX}"
  externalTrafficPolicy: Local
  ports:
    - appProtocol: http
      name: http
      port: 20080
      protocol: TCP
      targetPort: 80
    - appProtocol: https
      name: https
      port: 20443
      protocol: TCP
      targetPort: 443
    - name: internalhttp
      port: 80
      protocol: TCP
      targetPort: 42080
    - name: internalhttps
      port: 443
      protocol: TCP
      targetPort: 42443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
